--- a/gradle.properties
+++ b/gradle.properties
@@ -31,6 +31,6 @@ org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configureondemand=false
 
-# Use Java 17 for compatibility
-org.gradle.java.home=E:\\Program Files\\Java\\jdk-17
+# Use Java 17 for compatibility - using system default Java installation
+# org.gradle.java.home=E:\\Program Files\\Java\\jdk-17
 
